--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-import": "^2.20.0"
   },
   "dependencies": {
-    "commander": "^4.1.0"
+    "commander": "^4.1.0",
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.15"
   }
 }
