update babel version

--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/Talinka/frontend-project-lvl2#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/cli": ">=7.8.7",
+    "@babel/core": ">=7.8.7",
+    "@babel/node": ">=7.8.7",
+    "@babel/preset-env": ">=7.8.7",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
